Construct the capability type